feat: 枝の表示を自動でグラデーションできるようにした

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://gitlab.com/manabydevelop/canvas#readme",
   "devDependencies": {
-    "eslint": "^6.7.1"
-  }
+    "eslint": "^6.7.2"
+  },
+  "dependencies": {}
 }
